# nosis

./: .gitignore  .pnpm-approve-builds.json  AGENTS.md  AGENT_RUNTIME_PHASES.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  biome.jsonc  index.html  lefthook.yml  migration.md  package.json  pnpm-lock.yaml  release-please-config.json  turbo.json  vite.config.ts
.github/workflows/: ci.yml  migrate.yml  release.yml
.letta/: settings.local.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: api.ts  letta.ts  main.ts  mcp-clients.ts  mcp-oauth.ts  streaming.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: arcade.rs  commands.rs  db.rs  error.rs  fal.rs  lib.rs  main.rs  oauth_callback.rs  placement.rs  secrets.rs  util.rs  vault.rs
apps/web/: .gitignore  next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/components/: app-shell-grid.tsx  app-sidebar.tsx  auth-guard.tsx  chat-input.tsx  chat-messages.tsx  code-chat-input.tsx  code-chat-messages.tsx  code-thread-item.tsx  code-workspace-provider.tsx  diff-view.tsx  github-controls-panel.tsx  github-repo-list.tsx  (+3 more)
apps/web/tests/: execution-import-boundary.test.ts  git-ops.test.ts  git-workspace-runtime.behavior.test.ts  git-workspace-runtime.test.ts  worker-api-validation.test.ts  worker-chat-api.test.ts  worker-code-api.test.ts  worker-github-api.test.ts  worker-http-client.test.ts
apps/worker/: .dev.vars.example  package.json  tsconfig.json  wrangler.jsonc
apps/worker/drizzle/: 0001_large_photon.sql  0002_orange_firelord.sql  0003_furry_miek.sql  0003_glossy_doctor_spectrum.sql  0004_overjoyed_the_anarchist.sql  0005_gray_red_shift.sql  0006_married_weapon_omega.sql
apps/worker/migrations/: 0001_initial_schema.sql
apps/worker/src/: arcade.ts  auth.ts  chat-request.ts  chat-skills.ts  chat.ts  crypto.ts  daytona.ts  db.ts  exa.ts  firecrawl.ts  github.ts  index.ts  keys.ts  mcp.ts  middleware.ts  runtime-adapter.ts  sanitize.ts  schema.ts  types.ts  validate.ts
apps/worker/test/: validate.test.ts
apps/worker/tests/: chat-request.test.ts  chat-skills.test.ts  chat-validation.test.ts  execution-runtime.test.ts  github-route-errors.test.ts  runtime-import-boundary.test.ts
src/: letta.ts  main.ts  mcp-clients.ts  streaming.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: arcade.rs  commands.rs  db.rs  error.rs  exa.rs  lib.rs  placement.rs  secrets.rs  supermemory.rs
(+55 files in other folders)
