[package]
name = "muppet"
version = "0.1.0"
description = "Aggressively performant AI chat client for macOS"
authors = ["rodrigo"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "muppet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-stronghold = "2"
tauri-plugin-global-shortcut = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
# Optimize for size with LTO for smaller, faster desktop app binary
lto = true
opt-level = "s"
codegen-units = 1
strip = true
