[package]
name = "nosis"
version = "0.2.0" # x-release-please-version
description = "Aggressively performant AI chat client for macOS"
authors = ["rodrigo"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nosis_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = true
